@@ -26,7 +26,7 @@ Mario Goegel <m.goegel@gmx.de>
 (...and all the others that have been forgotten...) :-)
 
 No support for Asterisk 1.0.x any more, you need at least
-Asterisk 1.2.x
+Asterisk 1.2.x , 1.4.x or 1.6.x.
 
 Note:
 Eicon DIVA Server cards are now named Dialogic(R) Diva(R).
