@@ -18,7 +18,7 @@ None yet - you will be welcome here :-)
 (...and all the others that have been forgotten...) :-)
 
 No support for Asterisk 1.0.x any more, you need at least
-Asterisk 1.2.x
+Asterisk 1.2.x , 1.4.x or 1.6.x.
 
 What is Q.SIG
 =============
