@@ -1,6 +1,12 @@
 CHANGES
 =======
 
+HEAD
+------------------
+- fixed controller count when creating NULL-PLCI interface.
+- simplified check for unused controller.
+
+
 chan_capi-1.1.0
 ------------------
 - send local DATE/TIME with CONNECT when in NT-mode.
